Ensure we are sorting lements of the slice